fix list items overflowing when too many of them, fix response on file too large not being MB

--- a/internal/webfiles/styles.css
+++ b/internal/webfiles/styles.css
@@ -11,7 +11,6 @@ body {
 
 .container {
 	display: flex;
-    max-height: 500px;
 	max-width: 500px;
     border-radius: 10px;
 	border: 1px solid #FFFFFF;
